updated final touches on all breakpoint styling, checked for any horizontal scroll, debugged images to make them centered and corrected nesting for image in lets  go for a walk

--- a/css/index.css
+++ b/css/index.css
@@ -320,6 +320,7 @@ footer {
     padding-right: 0;
     padding-left: 0;
     flex-direction: column-reverse;
+    margin-top: 10px;
   }
 }
 @media (max-width: 500px) {
@@ -444,20 +445,23 @@ footer {
     border: 1px solid #22283A;
   }
 }
-.home .walk .walk-text .walk-img {
+.home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
 }
 @media (max-width: 900px) {
-  .home .walk .walk-text .walk-img {
-    width: 75%;
-    height: 75%;
-    margin: 0 auto;
+  .home .walk .walk-img {
+    height: auto;
+    width: 100%;
     margin-bottom: 20px;
+    margin-left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 @media (max-width: 500px) {
-  .home .walk .walk-text .walk-img {
+  .home .walk .walk-img {
     width: 100%;
     height: 100%;
     margin-top: 20px;
@@ -467,8 +471,17 @@ footer {
     margin-left: 5%;
   }
 }
-.home .walk .walk-text img {
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
+.home .walk .walk-img img {
+  border-radius: 5px;
+}
+@media (max-width: 900px) {
+  .home .walk .walk-img img {
+    margin-top: -15px;
+  }
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img img {
+    width: 100%;
+    padding-top: 20px;
+  }
 }
