--- a/less/home-page.less
+++ b/less/home-page.less
@@ -86,6 +86,7 @@
       padding-right: 0;
       padding-left: 0;
       flex-direction: column-reverse;
+      margin-top: 10px;
     }
     
     @media @phone {
@@ -152,15 +153,17 @@
       }
      }
     }
-
+}
     .walk-img {
       width: 46%;
       margin-left: 4%;
 
       @media @tablet {
-        .image-size(75%, 75%);
-        margin: 0 auto;
+        .image-size();
+        width: 100%;
         margin-bottom: 20px;
+        margin-left: 0;
+        .flexbox();
       }
 
       @media @phone {
@@ -169,13 +172,17 @@
         margin-bottom: 40px;
         .mobile-gutter();
       }
-      }
       img {
-        width: 100%;
-        height: auto;
-        border-radius: 10px;
+        border-radius: 5px;
+
+        @media @tablet{
+          margin-top: -15px;
+        }
+        @media @phone {
+          width: 100%;
+          padding-top: 20px;
+        }
       }
-    
+    }   
   }
-}
 }// home
